needed to force x86 check, otherwise executable does bad stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ add_library(${PROJECT_NAME} STATIC
     ${LOCAL_SOURCE_DIR}/hde64.c
     hde64_post.c)
 
-add_executable(minfuncfind
-    ${LOCAL_SOURCE_DIR}/hde32.c
-    ${LOCAL_SOURCE_DIR}/hde64.c
-    ${LOCAL_SOURCE_DIR}/main.cpp)
+if(ARCH MATCHES "AMD64" OR ARCH MATCHES "i386" OR ARCH MATCHES "x86_64")
+    add_executable(minfuncfind
+        ${LOCAL_SOURCE_DIR}/hde32.c
+        ${LOCAL_SOURCE_DIR}/hde64.c
+        ${LOCAL_SOURCE_DIR}/main.cpp)
+endif()
