val_set_t and executable stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(hde_x86)
 
 set(LOCAL_SOURCE_DIR minfuncfind)
 
-add_library(${PROJECT_NAME} STATIC
+add_library(${PROJECT_NAME} SHARED
     ${LOCAL_SOURCE_DIR}/hde32.c
     ${LOCAL_SOURCE_DIR}/hde64.c
     hde64_post.c)
@@ -12,9 +12,10 @@ if(ARCH MATCHES "AMD64" OR ARCH MATCHES "i386" OR ARCH MATCHES "x86_64")
         ${LOCAL_SOURCE_DIR}/hde32.c
         ${LOCAL_SOURCE_DIR}/hde64.c
         ${LOCAL_SOURCE_DIR}/main.cpp)
+    
+    add_executable(${PROJECT_NAME}.x hde_exe.c)
 endif()
 
-add_executable(${PROJECT_NAME}.x hde_exe.c)
 
 set(INCLUDE_LIST ${ANDROID_TOOL_BASE}/common/local_util)
 
@@ -27,6 +28,8 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     list(APPEND LINK_LIST getopt_for_windows_static)
 endif()
 
-target_include_directories(${PROJECT_NAME}.x PRIVATE ${INCLUDE_LIST})
+if(ARCH MATCHES "AMD64" OR ARCH MATCHES "i386" OR ARCH MATCHES "x86_64")
+    target_include_directories(${PROJECT_NAME}.x PRIVATE ${INCLUDE_LIST})
+    target_link_libraries(${PROJECT_NAME}.x PRIVATE ${LINK_LIST})
+endif()
 
-target_link_libraries(${PROJECT_NAME}.x PRIVATE ${LINK_LIST})
