localutil xnu additions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(LIBDIR_LIST )
 
 set(LINK_LIST ${PROJECT_NAME} localUtil)
 
-add_library(${PROJECT_NAME} SHARED
+add_library(${PROJECT_NAME} STATIC
     ${LOCAL_SOURCE_DIR}/hde32.c
     ${LOCAL_SOURCE_DIR}/hde64.c
     hde64_post.c)
